--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,21 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/AutoTrading?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/AutoTrading?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${USERNAME}
     password: ${PASSWORD}
+
+  jpa:
+    hibernate:
+      ddl-auto: update   # create, create-drop, update, validate 중 선택
+    show-sql: true       # 실행되는 SQL 로그 출력
+    properties:
+      hibernate:
+        format_sql: true # SQL 보기 좋게 출력
+    database-platform: org.hibernate.dialect.MySQLDialect
+
+  logging:
+    level:
+      org.hibernate.SQL: debug
+      org.hibernate.type.descriptor.sql: trace
+
