--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation("com.google.code.gson:gson:2.10.1")
 }
 
 tasks.named('test') {
